--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
