--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
