--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
